; ModuleID = '/home/carl/AnghaBench/linux/kernel/irq/extr_irqdesc.c___irq_get_desc_lock.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/irq/extr_irqdesc.c___irq_get_desc_lock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.irq_desc = type { i32 }

@_IRQ_DESC_CHECK = common dso_local global i32 0, align 4
@_IRQ_DESC_PERCPU = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.irq_desc* @__irq_get_desc_lock(i32 %0, i64* %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.irq_desc*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.irq_desc*, align 8
  store i32 %0, i32* %6, align 4
  store i64* %1, i64** %7, align 8
  store i32 %2, i32* %8, align 4
  store i32 %3, i32* %9, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call %struct.irq_desc* @irq_to_desc(i32 %11)
  store %struct.irq_desc* %12, %struct.irq_desc** %10, align 8
  %13 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  %14 = icmp ne %struct.irq_desc* %13, null
  br i1 %14, label %15, label %53

15:                                               ; preds = %4
  %16 = load i32, i32* %9, align 4
  %17 = load i32, i32* @_IRQ_DESC_CHECK, align 4
  %18 = and i32 %16, %17
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %41

20:                                               ; preds = %15
  %21 = load i32, i32* %9, align 4
  %22 = load i32, i32* @_IRQ_DESC_PERCPU, align 4
  %23 = and i32 %21, %22
  %24 = icmp ne i32 %23, 0
  br i1 %24, label %25, label %30

25:                                               ; preds = %20
  %26 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  %27 = call i64 @irq_settings_is_per_cpu_devid(%struct.irq_desc* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %30, label %29

29:                                               ; preds = %25
  store %struct.irq_desc* null, %struct.irq_desc** %5, align 8
  br label %55

30:                                               ; preds = %25, %20
  %31 = load i32, i32* %9, align 4
  %32 = load i32, i32* @_IRQ_DESC_PERCPU, align 4
  %33 = and i32 %31, %32
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %40, label %35

35:                                               ; preds = %30
  %36 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  %37 = call i64 @irq_settings_is_per_cpu_devid(%struct.irq_desc* %36)
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %40

39:                                               ; preds = %35
  store %struct.irq_desc* null, %struct.irq_desc** %5, align 8
  br label %55

40:                                               ; preds = %35, %30
  br label %41

41:                                               ; preds = %40, %15
  %42 = load i32, i32* %8, align 4
  %43 = icmp ne i32 %42, 0
  br i1 %43, label %44, label %47

44:                                               ; preds = %41
  %45 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  %46 = call i32 @chip_bus_lock(%struct.irq_desc* %45)
  br label %47

47:                                               ; preds = %44, %41
  %48 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  %49 = getelementptr inbounds %struct.irq_desc, %struct.irq_desc* %48, i32 0, i32 0
  %50 = load i64*, i64** %7, align 8
  %51 = load i64, i64* %50, align 8
  %52 = call i32 @raw_spin_lock_irqsave(i32* %49, i64 %51)
  br label %53

53:                                               ; preds = %47, %4
  %54 = load %struct.irq_desc*, %struct.irq_desc** %10, align 8
  store %struct.irq_desc* %54, %struct.irq_desc** %5, align 8
  br label %55

55:                                               ; preds = %53, %39, %29
  %56 = load %struct.irq_desc*, %struct.irq_desc** %5, align 8
  ret %struct.irq_desc* %56
}

declare dso_local %struct.irq_desc* @irq_to_desc(i32) #1

declare dso_local i64 @irq_settings_is_per_cpu_devid(%struct.irq_desc*) #1

declare dso_local i32 @chip_bus_lock(%struct.irq_desc*) #1

declare dso_local i32 @raw_spin_lock_irqsave(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
